# training

./: .gitignore  Makefile  auto_notes.py  calendar_export.py  checkin.py  coach.md  coach.py  dashboard.md  dashboard.py  dashboard_app.py  dashboard_redesign.html  dashboard_web.py  features.py  garmin.py  garmin_login.py  garmin_oauth.py  ingest.py  launch.sh  nsa-two-oceans-2027-plan.md  plan.ics  plan_lookup.py  principles.md  publish_calendar.py  pyproject.toml  refresh_session.py  sync.py  tasks.py  tasks.yaml  workouts.py
activities/: 2026-05-14-walking-22879338565.md  2026-05-16-running-22901181451.md
data/activity_streams/: 22879338565.json  22901181451.json
data/alcohol/: 2026-05-14.json  2026-05-15.json  2026-05-17.json
data/daily/: 2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json
references/: README.md  benazieb-imbach-2025-banister-flaws.md  davis-2025-kristoffer-ingebrigtsen.md  figueiredo-2025-cadence-systematic-review.md  house-uphill-athlete-hr-drift.md  manresa-rocamora-2021-hrv-meta.md  vesterinen-2016-hrv-prescription.md
systemd/: training-dashboard.service
(+96 files in other folders)
