[project]
name = "training"
version = "0.1.0"
description = "Garmin sync + dashboard for NSA Two Oceans 2027 plan"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "garminconnect>=0.3.2",
    "garth>=0.5.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "playwright>=1.59.0",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
]

[tool.uv]
package = false
